@@ -12,6 +12,12 @@ tbd  Sun Microsystems, Inc.
        * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
         removed cwd "./" (refer to Bugzilla 14399).
 
+Severity   : minor 
+Bugzilla   : 16717 
+Description: LBUG when llog conf file is full 
+Details    : When llog bitmap is full, ENOSPC should be returned for plain
+             log.
+
 Severity   : normal
 Bugzilla   : 16907
 Description: Prevent import from entering FULL state when server in recovery
